test/parsing/errors/sparse-subdomain-twoargs.chpl
const dom = {1..10, 1..10};
var x: [0..1] sparse subdomain(dom, stridable=true);
